# SattLint

./: .codegraph.toml  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .pyright-analyzers-strict.tmp.json  .pyright-dataflow-slice.tmp.json  .pyright.strict.parser.out.json  .pyright.strict.parser.tmp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  TODO_GUI.md  TODO_REFACTOR.md  TODO_SATTLINT.md  TODO_TOOLS.md  _coverage_check.py  _fix_cli.py  compare.py  consolidated-review.md  custom.toml  opencode.json  package-lock.json  process_pyright.py  pyproject.toml  pyright_audit.py  pyright_batch_probe_out.json  pyright_output.json  pyright_output_devtools.json  pyright_probe_out.json  pyright_strict_devtools_results.json  pyrightconfig.json  (+25 more)
.ai/: README.md
.ai/handoffs/: handoff.example.json  handoff.schema.json  ratchet-down-app-routing.json  ratchet-lane-a-variables-reporting.json  ratchet-lane-b-repo-audit-devtools.json  t-59-test-hardening.json  t-61-security-supply-chain.json  t-61b-publish-hardening.json  t-62-performance-scalability.json  t-64-routing-doc-gardener.json
.ai/tasks/: ratchet-down-app-routing.json  ratchet-lane-b-repo-audit-devtools.json  ratchet-lane-c-uncovered-typing-inventory.json  t-59-test-hardening.json  t-61-security-supply-chain.json  t-61b-publish-hardening.json  t-62-performance-scalability.json  t-64-routing-doc-gardener.json  task-contract.example.json  task-contract.schema.json
.clusterfuzzlite/: Dockerfile  build.sh
.codegraph/: config.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: cli-app-menu.agent.md  documentation-generation.agent.md  parser-analysis.agent.md  planner.agent.md  repo-audit.agent.md  repo-verify.agent.md  reviewer.agent.md  sattlint-orchestrator.agent.md  test.agent.md  workspace-lsp.agent.md
.github/approvals/: README.md  ratchet-rebaseline-2026-05-01.md  ratchet-rebaseline-2026-05-04.md  ratchet-rebaseline-2026-05-05.md  ratchet-rebaseline-2026-05-07.md  ratchet-rebaseline-2026-05-08.md  ratchet-rebaseline-2026-05-11.md  ratchet-rebaseline-2026-05-13.md  ratchet-rebaseline-2026-05-18-analyzers.md  ratchet-rebaseline-2026-05-18-devtools.md  ratchet-rebaseline-2026-05-18.md  ratchet-rebaseline-2026-05-19-global-strict.md  ratchet-rebaseline-2026-05-19-gui.md  ratchet-rebaseline-2026-05-20.md  ratchet-rebaseline-2026-05-21.md  ratchet-rebaseline-2026-05-26.md  ratchet-rebaseline-2026-05-28.md  ratchet-rebaseline-2026-06-01.md  ratchet-rebaseline-2026-06-04.md  ratchet-rebaseline-2026-06-05.md
.github/coordination/: current-work.md  current-work.template.md
.github/hooks/: ai-edit-gate.json  claimed-files-guard.json  session-context.json
.github/instructions/: agent-customizations.instructions.md  analyzer-architecture.instructions.md  cli-app.instructions.md  docgen.instructions.md  parser-analysis.instructions.md  python-code-discipline.instructions.md  python-tests.instructions.md  ratchet-policy.instructions.md  repo-audit.instructions.md  repo-map.instructions.md  sattline-invariants.instructions.md  test-fixtures.instructions.md  workspace-lsp.instructions.md
.github/prompts/: architecture-review.prompt.md  cli-app-change.prompt.md  codegraph-maintenance.prompt.md  documentation-generation-change.prompt.md  explore-codebase.prompt.md  implement-debt-slice.prompt.md  merge-workstreams.prompt.md  parallel-work.prompt.md  parser-fix.prompt.md  plan-debt-slice.prompt.md  plan-parallel-debt-slices.prompt.md  repo-audit-change.prompt.md  repo-verify.prompt.md  review-ai-sessions.prompt.md  review-slice.prompt.md  validate-slice.prompt.md  workspace-lsp-fix.prompt.md
.github/workflows/: ci.yml  fuzz.yml  lint.yml  (+6 more)
SattLineReferenceDocs/: sattline_alarms_events_reference.md  sattline_controllers_analog_reference.md  sattline_data_acquisition_reference.md
docs/: ai-agent-reference.md  ai-workflows.md  architecture.md  context-loading-order.md  quality-gates.md  quality-score.md  refactor-remaining.md  refactor-wave1-audit.md  repo-map.md  sattline_system_procedures_reference.md
dumps/: sattline_filled.lark
metrics/: layer_lint_policy.json  ratchet.json
scripts/: _python_runtime.py  _repo_paths.py  bootstrap_ai_slice.py  check_abblib_parse.py  check_ratchet_policy.py  codegraph-import.sh  codegraph-index-export.sh  codegraph-start-db.sh  context_health.py  install_actionlint.py  migrate_current_work_ledger.py  quick_abblib_check.py  refresh_repo_health_dashboard.py  render_ai_session_review.py  repo_health.py  run_actionlint.py  run_ai_edit_gate.py  run_cli_menu_audit.py  run_markdownlint.py  run_pre_push_gate.py  run_repo_audit_precommit.py  run_repo_python.py  run_repo_python.sh  test_all_compressed.py  update_ai_known_failure_patterns.py
src/: app.py  config.toml  engine.py
tests/: .gitignore  SattLineFullGrammarTest.l  SattLineFullGrammarTest.p  __init__.py  _analyzers_state_part1.py  _analyzers_state_part2.py  _analyzers_state_part3.py  _analyzers_state_part4.py  _analyzers_state_part5.py  _analyzers_state_part6.py  _analyzers_state_test_support.py  _analyzers_suites_part1.py  _analyzers_suites_part2.py  _analyzers_suites_part3.py  _analyzers_suites_part4.py  _analyzers_suites_part5.py  _analyzers_suites_part6.py  _analyzers_suites_test_support.py  _analyzers_variables_part1.py  _analyzers_variables_part2.py  _analyzers_variables_part3.py  _analyzers_variables_part4.py  _analyzers_variables_part5.py  _analyzers_variables_test_support.py  _app_analysis_part1.py  _app_analysis_part2.py  _app_analysis_part3.py  _app_analysis_part4.py  _app_analysis_test_support.py  _app_menus_support.py  _docgen_fixture_builders.py  _docgen_part1.py  _docgen_part4.py  _docgen_part5.py  _docgen_test_support.py  _gui_test_support.py  _pipeline_collection_part1.py  _pipeline_collection_part3.py  _pipeline_collection_part4.py  _pipeline_collection_part5.py  (+220 more)
(+1791 files in other folders)
