[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sattlint"
dynamic = ["version"]
description = "Static analysis, validation, documentation, and LSP tooling for SattLine projects"
readme = "README.md"
license = "MIT"
authors = [{ name = "S\u00f8ren H. Johansen" }]
requires-python = ">=3.13"
keywords = ["sattline", "static-analysis", "lsp", "documentation", "plc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "lark>=1.3.1,<2",
    "regex>=2024.0.0",
    "python-docx>=0.8.11",
    "lxml>=6.1.0",
    "tomli_w>=1.2.0",
    "openpyxl>=3.1.2",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/SorenHJohansen/SattLint"
Repository = "https://github.com/SorenHJohansen/SattLint"
Issues = "https://github.com/SorenHJohansen/SattLint/issues"
Documentation = "https://github.com/SorenHJohansen/SattLint#readme"

[project.optional-dependencies]
lsp = [
    "pygls>=1.3.1",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",       # Coverage reporting
    "pytest-mock>=3.10.0",     # Mocking capabilities
    "pytest-xdist>=3.0.0",     # Parallel testing
    "pytest-benchmark>=4.0.0", # Performance testing
    "interegular>=0.3.3",      # Lark strict-mode regex collision checks
]

dev = [
    "sattlint[test,lsp]",
    "ruff>=0.1.0",      # Linting & formatting
    "pyright>=1.1.380", # Type checking
    "build>=1.2.2",    # Build frontend for release validation
    "bandit>=1.8.0",   # Security analysis
    "pip-audit>=2.8.0", # Dependency vulnerability scanning
    "rich>=13.9.0",    # Optional terminal formatting
    "twine>=5.1.1",    # Package metadata validation
    "vulture>=2.11",    # Dead code analysis
    "types-openpyxl",  # Stubs for mypy
    "types-regex",     # Stubs for regex
    "pre-commit>=4.0", # Git hooks
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=87.26",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "parser: marks tests related to parser functionality",
    "analyzer: marks tests related to analyzer functionality",
]

[tool.coverage.report]
precision = 2

[project.scripts]
sattlint = "sattlint.app:cli"
sattlint-gui = "sattlint_gui.main:gui"
sattlint-lsp = "sattlint_lsp.server:cli"
sattlint-analysis-pipeline = "sattlint.devtools.pipeline:main"
sattlint-corpus-runner = "sattlint.devtools.corpus:main"
sattlint-repo-audit = "sattlint.devtools.repo_audit:main"
sattlint-structural-ratchet = "sattlint.devtools.structural_reports:main"
sattlint-doc-gardener = "sattlint.devtools.doc_gardener:main"
sattlint-layer-lint = "sattlint.devtools.layer_linter:main"
sattlint-review = "sattlint.devtools.review_tool:main"
sattlint-observability = "sattlint.devtools.observability:main"
sattlint-trace = "sattlint.tracing:cli"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugarith
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/sattline_parser/models/ast_model.py" = ["N801"]
"src/sattline_parser/transformer/sl_transformer.py" = ["N802"]
"src/sattline_parser/transformer/_modules_mixin.py" = ["N802"]
"src/sattline_parser/transformer/_tokens_mixin.py" = ["N802"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false
exclude = ["src/sattlint_lsp/"]
strict = [
    "src/sattline_parser/__init__.py",
    "src/sattline_parser/grammar/__init__.py",
    "src/sattline_parser/models/__init__.py",
    "src/sattline_parser/transformer/__init__.py",
    "src/sattline_parser/utils/__init__.py",
    "src/sattline_parser/utils/text_processing.py",
    "src/sattlint/core/__init__.py",
    "src/sattlint/core/diagnostics.py",
    "src/sattlint/core/document.py",
    "src/sattlint/core/safety_paths.py",
    "src/sattlint/core/taint_paths.py",
    "src/sattlint/devtools/__init__.py",
    "src/sattlint/devtools/_structural_budget_inventory.py",
    "src/sattlint/devtools/ai_gc.py",
    "src/sattlint/devtools/artifact_registry.py",
    "src/sattlint/devtools/baselines.py",
    "src/sattlint/devtools/pipeline_artifacts.py",
    "src/sattlint/devtools/pipeline_checks.py",
    "src/sattlint/devtools/repo_audit_cli.py",
    "src/sattlint/devtools/status_reports.py",
    "src/sattlint/devtools/tool_reports.py",
    "src/sattlint/devtools/trace_reports.py",
]

[tool.sattlint.typing_ratchet]
strict_roots = [
    "src/sattline_parser",
    "src/sattlint/core",
    "src/sattlint/devtools",
]
debt_allowlist = [
    "src/sattline_parser/api.py",
    "src/sattline_parser/fuzz_harness.py",
    "src/sattline_parser/grammar/constants.py",
    "src/sattline_parser/grammar/parser_decode.py",
    "src/sattline_parser/models/ast_model.py",
    "src/sattline_parser/transformer/_expressions_mixin.py",
    "src/sattline_parser/transformer/_graphics_interact_mixin.py",
    "src/sattline_parser/transformer/_modules_mixin.py",
    "src/sattline_parser/transformer/_sfc_mixin.py",
    "src/sattline_parser/transformer/_tokens_mixin.py",
    "src/sattline_parser/transformer/sl_transformer.py",
    "src/sattline_parser/utils/formatter.py",
    "src/sattlint/core/ast_tools.py",
    "src/sattlint/core/semantic.py",
    "src/sattlint/devtools/accuracy_metrics.py",
    "src/sattlint/devtools/ai_templates.py",
    "src/sattlint/devtools/ai_work_map.py",
    "src/sattlint/devtools/corpus.py",
    "src/sattlint/devtools/coverage_reports.py",
    "src/sattlint/devtools/derived_reports.py",
    "src/sattlint/devtools/differential.py",
    "src/sattlint/devtools/doc_gardener.py",
    "src/sattlint/devtools/finding_exports.py",
    "src/sattlint/devtools/layer_linter.py",
    "src/sattlint/devtools/mutation_engine.py",
    "src/sattlint/devtools/observability.py",
    "src/sattlint/devtools/parser_properties.py",
    "src/sattlint/devtools/pipeline.py",
    "src/sattlint/devtools/production_summary.py",
    "src/sattlint/devtools/progress_reporting.py",
    "src/sattlint/devtools/repo_audit.py",
    "src/sattlint/devtools/repo_audit_entrypoints.py",
    "src/sattlint/devtools/review_tool.py",
    "src/sattlint/devtools/semantic_reports.py",
    "src/sattlint/devtools/structural_reports.py",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sattlint.__version__.__version__" }

[tool.setuptools.package-data]
sattlint = ["grammar/*.lark"]
sattline_parser = ["grammar/*.lark"]
