[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sattlint"
dynamic = ["version"]
description = "Static analysis, validation, documentation, and LSP tooling for SattLine projects"
readme = "README.md"
license = "MIT"
authors = [{ name = "S\u00f8ren H. Johansen" }]
requires-python = ">=3.13"
keywords = ["sattline", "static-analysis", "lsp", "documentation", "plc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "lark>=1.3.1,<2",
    "regex>=2024.0.0",
    "python-docx>=0.8.11",
    "lxml>=6.1.0",
    "tomli_w>=1.2.0",
    "openpyxl>=3.1.2",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/SorenHJohansen/SattLint"
Repository = "https://github.com/SorenHJohansen/SattLint"
Issues = "https://github.com/SorenHJohansen/SattLint/issues"
Documentation = "https://github.com/SorenHJohansen/SattLint#readme"

[project.optional-dependencies]
lsp = [
    "pygls>=1.3.1",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",       # Coverage reporting
    "pytest-mock>=3.10.0",     # Mocking capabilities
    "pytest-xdist>=3.0.0",     # Parallel testing
    "pytest-benchmark>=4.0.0", # Performance testing
    "interegular>=0.3.3",      # Lark strict-mode regex collision checks
]

dev = [
    "sattlint[test,lsp]",
    "ruff==0.15.12",    # Match pre-commit Ruff to avoid formatter drift
    "pyright>=1.1.380", # Type checking
    "build>=1.2.2",    # Build frontend for release validation
    "bandit>=1.8.0",   # Security analysis
    "pip-audit>=2.8.0", # Dependency vulnerability scanning
    "rich>=13.9.0",    # Optional terminal formatting
    "twine>=5.1.1",    # Package metadata validation
    "vulture>=2.11",    # Dead code analysis
    "types-openpyxl",  # Stubs for mypy
    "types-regex",     # Stubs for regex
    "pre-commit>=4.0", # Git hooks
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=87.26",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "parser: marks tests related to parser functionality",
    "analyzer: marks tests related to analyzer functionality",
]

[tool.coverage.report]
precision = 2

[project.scripts]
sattlint = "sattlint.app:cli"
sattlint-gui = "sattlint_gui.main:gui"
sattlint-lsp = "sattlint_lsp.server:cli"
sattlint-analysis-pipeline = "sattlint.devtools.pipeline:main"
sattlint-corpus-runner = "sattlint.devtools.corpus:main"
sattlint-repo-audit = "sattlint.devtools.repo_audit:main"
sattlint-structural-ratchet = "sattlint.devtools.structural_reports:main"
sattlint-doc-gardener = "sattlint.devtools.doc_gardener:main"
sattlint-layer-lint = "sattlint.devtools.layer_linter:main"
sattlint-review = "sattlint.devtools.review_tool:main"
sattlint-observability = "sattlint.devtools.observability:main"
sattlint-trace = "sattlint.tracing:cli"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugarith
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/sattlint/config.py" = ["RUF034"]
"src/sattline_parser/models/ast_model.py" = ["N801"]
"src/sattline_parser/transformer/sl_transformer.py" = ["N802"]
"src/sattline_parser/transformer/_modules_mixin.py" = ["N802"]
"src/sattline_parser/transformer/_tokens_mixin.py" = ["N802"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false
strict = [
    "src/sattline_parser/__init__.py",
    "src/sattline_parser/api.py",
    "src/sattline_parser/fuzz_harness.py",
    "src/sattline_parser/grammar/__init__.py",
    "src/sattline_parser/grammar/constants.py",
    "src/sattline_parser/grammar/parser_decode.py",
    "src/sattline_parser/models/__init__.py",
    "src/sattline_parser/models/_ast_model_support.py",
    "src/sattline_parser/models/ast_model.py",
    "src/sattline_parser/transformer/__init__.py",
    "src/sattline_parser/transformer/_expressions_mixin.py",
    "src/sattline_parser/transformer/_graphics_interact_mixin.py",
    "src/sattline_parser/transformer/_modules_mixin.py",
    "src/sattline_parser/utils/__init__.py",
    "src/sattline_parser/utils/text_processing.py",
    "src/sattlint/__init__.py",
    "src/sattlint/__main__.py",
    "src/sattlint/__version__.py",
    "src/sattlint/_app_analysis_variable_analyses.py",
    "src/sattlint/app.py",
    "src/sattlint/app_analysis.py",
    "src/sattlint/app_base.py",
    "src/sattlint/app_cli_commands.py",
    "src/sattlint/app_docs.py",
    "src/sattlint/app_graphics.py",
    "src/sattlint/app_menus.py",
    "src/sattlint/app_support.py",
    "src/sattlint/analyzers/__init__.py",
    "src/sattlint/analyzers/dataflow.py",
    "src/sattlint/analyzers/comment_code.py",
    "src/sattlint/_validation_shared.py",
    "src/sattlint/analyzers/icf.py",
    "src/sattlint/analyzers/issue.py",
    "src/sattlint/analyzers/_sfc_collectors.py",
    "src/sattlint/analyzers/_sfc_module_walk.py",
    "src/sattlint/analyzers/sattline_builtins.py",
    "src/sattlint/analyzers/unsafe_defaults.py",
    "src/sattlint/analyzers/usage_tracker.py",
    "src/sattlint/analyzers/_variables_access.py",
    "src/sattlint/analyzers/_variables_effect_flow.py",
    "src/sattlint/analyzers/_variables_contracts.py",
    "src/sattlint/analyzers/_variables_execution.py",
    "src/sattlint/analyzers/_variables_status.py",
    "src/sattlint/analyzers/_variables_submodules.py",
    "src/sattlint/analyzers/variable_issue_collection.py",
    "src/sattlint/analyzers/variables.py",
    "src/sattlint/analyzers/framework.py",
    "src/sattlint/analyzers/initial_values.py",
    "src/sattlint/analyzers/modules.py",
    "src/sattlint/analyzers/parameter_drift.py",
    "src/sattlint/analyzers/reset_contamination.py",
    "src/sattlint/analyzers/safety_paths.py",
    "src/sattlint/analyzers/sattline_semantics.py",
    "src/sattlint/analyzers/registry.py",
    "src/sattlint/analyzers/shadowing.py",
    "src/sattlint/analyzers/symbolic_lite.py",
    "src/sattlint/analyzers/taint_paths.py",
    "src/sattlint/analyzers/spec_compliance.py",
    "src/sattlint/analyzers/variable_traversal.py",
    "src/sattlint/analyzers/variable_usage_reporting.py",
    "src/sattlint/call_signatures.py",
    "src/sattlint/casefolding.py",
    "src/sattlint/cli/__init__.py",
    "src/sattlint/console.py",
    "src/sattlint/contracts/__init__.py",
    "src/sattlint/core/__init__.py",
    "src/sattlint/core/diagnostics.py",
    "src/sattlint/core/document.py",
    "src/sattlint/core/semantic.py",
    "src/sattlint/core/safety_paths.py",
    "src/sattlint/core/taint_paths.py",
    "src/sattlint/devtools/__init__.py",
    "src/sattlint/devtools/_structural_budget_inventory.py",
    "src/sattlint/devtools/accuracy_metrics.py",
    "src/sattlint/devtools/ai_gc.py",
    "src/sattlint/devtools/ai_templates.py",
    "src/sattlint/devtools/ai_work_map.py",
    "src/sattlint/devtools/artifact_registry.py",
    "src/sattlint/devtools/baselines.py",
    "src/sattlint/devtools/coverage_reports.py",
    "src/sattlint/devtools/differential.py",
    "src/sattlint/devtools/observability.py",
    "src/sattlint/devtools/parser_properties.py",
    "src/sattlint/devtools/pipeline.py",
    "src/sattlint/devtools/pipeline_artifacts.py",
    "src/sattlint/devtools/pipeline_checks.py",
    "src/sattlint/devtools/production_summary.py",
    "src/sattlint/devtools/progress_reporting.py",
    "src/sattlint/devtools/repo_audit.py",
    "src/sattlint/devtools/repo_audit_cli.py",
    "src/sattlint/devtools/repo_audit_entrypoints.py",
    "src/sattlint/devtools/status_reports.py",
    "src/sattlint/devtools/structural_reports.py",
    "src/sattlint/devtools/tool_reports.py",
    "src/sattlint/devtools/trace_reports.py",
    "src/sattlint/docgenerator/analyzer_ref.py",
    "src/sattlint/docgenerator/configgen.py",
    "src/sattlint/docgenerator/__init__.py",
    "src/sattlint/editor_api.py",
    "src/sattlint/grammar/constants.py",
    "src/sattlint/grammar/parser_decode.py",
    "src/sattlint/graphics_rules.py",
    "src/sattlint/graphics_validation.py",
    "src/sattlint/models/__init__.py",
    "src/sattlint/models/ast_model.py",
    "src/sattlint/models/project_graph.py",
    "src/sattlint/models/usage.py",
    "src/sattlint/path_sanitizer.py",
    "src/sattlint/reporting/__init__.py",
    "src/sattlint/reporting/comment_code_report.py",
    "src/sattlint/reporting/icf_report.py",
    "src/sattlint/reporting/mms_report.py",
    "src/sattlint/reporting/variables_report.py",
    "src/sattlint/resolution/__init__.py",
    "src/sattlint/resolution/access_graph.py",
    "src/sattlint/resolution/common.py",
    "src/sattlint/resolution/paths.py",
    "src/sattlint/resolution/scope.py",
    "src/sattlint/resolution/symbol_table.py",
    "src/sattlint/resolution/type_graph.py",
    "src/sattlint/semantic_analysis.py",
    "src/sattlint/transformer/__init__.py",
    "src/sattlint/transformer/sl_transformer.py",
    "src/sattlint/tracing.py",
    "src/sattlint/utils/__init__.py",
    "src/sattlint/utils/text_processing.py",
    "src/sattlint/validation.py",
    "src/sattlint_lsp/__init__.py",
    "src/sattlint_lsp/_server_document.py",
    "src/sattlint_lsp/_server_helpers.py",
    "src/sattlint_lsp/document_state.py",
    "src/sattlint_lsp/local_parser.py",
    "src/sattlint_lsp/server.py",
    "src/sattlint_lsp/workspace_store.py",
]

[tool.sattlint.typing_ratchet]
strict_roots = [
    "src/sattline_parser",
    "src/sattlint",
    "src/sattlint_lsp",
]
debt_allowlist = [
    "src/sattline_parser/transformer/_sfc_mixin.py",
    "src/sattline_parser/transformer/_tokens_mixin.py",
    "src/sattline_parser/transformer/sl_transformer.py",
    "src/sattline_parser/utils/formatter.py",
    "src/sattlint/_validation_expression.py",
    "src/sattlint/_validation_type_helpers.py",
    "src/sattlint/analyzers/_sfc_guard_logic.py",
    "src/sattlint/analyzers/alarm_integrity.py",
    "src/sattlint/analyzers/cyclomatic_complexity.py",
    "src/sattlint/analyzers/layout_geometry.py",
    "src/sattlint/analyzers/loop_output_refactor.py",
    "src/sattlint/analyzers/mms.py",
    "src/sattlint/analyzers/naming.py",
    "src/sattlint/analyzers/rule_profiles.py",
    "src/sattlint/analyzers/scan_loop_resource_usage.py",
    "src/sattlint/analyzers/sfc.py",
    "src/sattlint/analyzers/validators.py",
    "src/sattlint/cache.py",
    "src/sattlint/cli/entry.py",
    "src/sattlint/config.py",
    "src/sattlint/contracts/findings.py",
    "src/sattlint/core/ast_tools.py",
    "src/sattlint/devtools/corpus.py",
    "src/sattlint/devtools/derived_reports.py",
    "src/sattlint/devtools/doc_gardener.py",
    "src/sattlint/devtools/finding_exports.py",
    "src/sattlint/devtools/layer_linter.py",
    "src/sattlint/devtools/mutation_engine.py",
    "src/sattlint/devtools/review_tool.py",
    "src/sattlint/devtools/semantic_reports.py",
    "src/sattlint/docgenerator/classification.py",
    "src/sattlint/docgenerator/docgen.py",
    "src/sattlint/engine.py",
    "src/sattlint/resolution/context_builder.py",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sattlint.__version__.__version__" }

[tool.setuptools.package-data]
sattlint = ["grammar/*.lark"]
sattline_parser = ["grammar/*.lark"]
