[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sattlint"
dynamic = ["version"]
description = "Static analysis, validation, documentation, and LSP tooling for SattLine projects"
readme = "README.md"
license = "MIT"
authors = [{ name = "S\u00f8ren H. Johansen" }]
requires-python = ">=3.13"
keywords = ["sattline", "static-analysis", "lsp", "documentation", "plc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "lark>=1.3.1,<2",
    "regex>=2024.0.0",
    "python-docx>=0.8.11",
    "lxml>=6.1.0",
    "tomli_w>=1.2.0",
    "openpyxl>=3.1.2",
    "defusedxml>=0.7.1",
    "opentelemetry-api>=1.36.0,<2",
    "opentelemetry-sdk>=1.36.0,<2",
    "rich>=13.9.0",
    "textual>=0.66.0,<1",
]

[project.urls]
Homepage = "https://github.com/SorenHJohansen/SattLint"
Repository = "https://github.com/SorenHJohansen/SattLint"
Issues = "https://github.com/SorenHJohansen/SattLint/issues"
Documentation = "https://github.com/SorenHJohansen/SattLint#readme"
Support = "https://github.com/SorenHJohansen/SattLint/blob/main/SUPPORT.md"
Changelog = "https://github.com/SorenHJohansen/SattLint/blob/main/CHANGELOG.md"
Security = "https://github.com/SorenHJohansen/SattLint/security/policy"

[project.optional-dependencies]
lsp = [
    "pygls>=1.3.1",
]

tui = []

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",       # Coverage reporting
    "pytest-mock>=3.10.0",     # Mocking capabilities
    "pytest-timeout>=2.3.1",   # Fail fast on stalled tests
    "pytest-xdist>=3.0.0",     # Parallel testing
    "interegular>=0.3.3",      # Lark strict-mode regex collision checks
]

dev = [
    "sattlint[test,lsp,tui]",
    "ruff==0.15.13",    # Match pre-commit Ruff to avoid formatter drift
    "pyright>=1.1.380", # Type checking
    "build>=1.2.2",    # Build frontend for release validation
    "bandit>=1.8.0",   # Security analysis
    "pip-audit>=2.8.0", # Dependency vulnerability scanning
    "semble>=0.1.10",  # Optional semantic search for AI/devtools workflows
    "twine>=5.1.1",    # Package metadata validation
    "vulture>=2.11",    # Dead code analysis
    "types-openpyxl",  # Stubs for mypy
    "types-regex",     # Stubs for regex
    "pre-commit>=4.0", # Git hooks
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 60
timeout_method = "thread"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=87.26",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "parser: marks tests related to parser functionality",
    "analyzer: marks tests related to analyzer functionality",
]

[tool.coverage.report]
precision = 2

[project.scripts]
sattlint = "sattlint.app:cli"
sattlint-lsp = "sattlint_lsp.server:cli"
sattlint-analysis-pipeline = "sattlint.devtools.pipeline:main"
sattlint-corpus-runner = "sattlint.devtools.corpus:main"
sattlint-repo-audit = "sattlint.devtools.repo_audit:main"
sattlint-release-smoke = "sattlint.devtools.release_smoke:main"
sattlint-structural-ratchet = "sattlint.devtools.structural_reports:main"
sattlint-doc-gardener = "sattlint.devtools.doc_gardener:main"
sattlint-layer-lint = "sattlint.devtools.layer_linter:main"
sattlint-review = "sattlint.devtools.review_tool:main"
sattlint-observability = "sattlint.devtools.observability:main"
sattlint-trace = "sattlint.tracing:cli"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugarith
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/sattlint/config.py" = ["RUF034"]
"src/sattline_parser/models/ast_model.py" = ["N801"]
"src/sattline_parser/transformer/sl_transformer.py" = ["N802"]
"src/sattline_parser/transformer/_modules_mixin.py" = ["N802"]
"src/sattline_parser/transformer/_tokens_mixin.py" = ["N802"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingTypeStubs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603"]

[tool.sattlint.typing_ratchet]
debt_allowlist = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sattlint.__version__.__version__" }

[tool.setuptools.package-data]
sattlint = ["grammar/*.lark"]
sattline_parser = ["grammar/*.lark"]
